tests/paczka1/fuzzy1/88387248.err
Error in line 1: Q7qImEP A187 21,5
Error in line 5: e4gonqtOCs9 S949 81,5
Error in line 7: e4gonqtOCs9 A289 2,3
Error in line 2: Q7qImEP A289 55,9
Error in line 11: e4gonqtOCs9 A243 50,3
Error in line 18: Q7qImEP A243 86,3
Error in line 30: Q7qImEP A289 88,8
